I fixed spelling errors and blue on red is hard to see

--- a/css.css
+++ b/css.css
@@ -66,7 +66,7 @@ body {
 		background-color: red;
 		font-size: 1.5em;
 		text-align: 0 auto;
-		color: blue;
+		color: yellow;
 	}
 	
 	
